# kanalytics

./: CMakeLists.txt  Messages.sh
kded/: CMakeLists.txt  kanalytics.desktop  service.cpp  service.h
src/: CMakeLists.txt  hardware.cpp  hardware.h  kde.cpp  kde.h  summary.cpp  summary.h  system.cpp  system.h
tools/: CMakeLists.txt  main.cpp
